samples/errors/functions/arity.lif
function foo(p) {}

foo(1, 2);
